# hexagon

./: README.md  hexagon.cabal
doc/: LICENSE  doc-index.html  index.html  mini_Data-Hexagon.html
doc/src/: Data-Hexagon.html
hexagon-0.1.0.0/: Data-Hexagon.html  hexagon.haddock  hexagon.txt  index-frames.html
src/Data/: Hexagon.hs
src/Data/Hexagon/: Collections.hs  Coordinate.hs  Hexagon.hs  Orientation.hs
tests/: Tests.hs
