name:                hexagon
version:             0.1.0.0
synopsis:            Library for 2D hexagonal grid computations
description:         hexagon attempts to give you all the power discussed in http://www.redblobgames.com/grids/hexagons/. I, Joseph Rock, have no affiliation with Red Blob Games whatsoever.
homepage:            https://github.com/j-rock/hexagon
license:             MIT
license-file:        LICENSE
author:              Joseph Rock
maintainer:          wax818@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10


library
  default-language:    Haskell2010
  hs-source-dirs:      src
  -- exposed-modules:
  -- other-modules:
  build-depends:       base >=4.8 && <4.9

test-suite tests
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.8 && <4.9,
                       HUnit >= 1.2,
                       QuickCheck >= 2.4,
                       test-framework >= 0.6,
                       test-framework-hunit >= 0.2,
                       test-framework-quickcheck2 >= 0.2,
                       test-framework-th >= 0.2,
                       hexagon >= 0.1
