name:          hexagon
category:      Data, Math, Geometry
version:       0.1.0.0
license:       MIT
cabal-version: >=1.10
license-file:  LICENSE
author:        Joseph Rock
maintainer:    Joseph Rock <wax818@gmail.com>
homepage:      https://github.com/j-rock/hexagon
bug-reports:   https://github.com/j-rock/hexagon/issues
copyright:     Copyright (C) 2015 Joseph Rock
synopsis:      2D Hexagonal Grid Geometry
description:   Types and basic operations on hexagons within hexagonal grids.
build-type:    Simple
tested-with:   GHC == 7.10.2
extra-source-files:
  README.md

source-repository head
  type: git
  location: git://github.com/j-rock/hexagon.git

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Data.Hexagon
  build-depends:
    base               >= 4.8 && < 4.9,
    hashable           >= 1.2 && < 1.3,
    hashtables         >= 1.2 && < 1.3

test-suite tests
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:
    base                       >= 4.8 && < 4.9,
    HUnit                      >= 1.2 && < 1.3,
    QuickCheck                 >= 2.8 && < 2.9,
    test-framework             >= 0.8 && < 0.9,
    test-framework-hunit       >= 0.3 && < 0.4,
    test-framework-quickcheck2 >= 0.3 && < 0.4,
    test-framework-th          >= 0.2 && < 0.3,
    unordered-containers       >= 0.2 && < 0.3,
    hexagon
